# monodrone

./: .gitignore  .gitmodules  Cargo.toml  Monodrone.lean  MonodroneTests.lean  README.md  build.rs  lake-manifest.json  lakefile.lean  makefile
.github/workflows/: build_paper.yml  ci.yml  rust.yml
Monodrone/: NoteOmega.lean  PaperAttrs.lean
experimental/: .CMakeLists.txt.swp  .ffi.c.swp  .gitignore  CMakeLists.txt  build.sh  ffi.c  main.c  makefile
paper/: paper.tex
src/: chords.rs  constants.rs  counterpoint1.rs  datastructures.rs  editor.rs  egui_input.rs  ideimage.rs  keypicker.rs  leanffi.rs  main.rs  midi.rs  monodroneffi.rs  opz.rs
the-enemy/: Sequencer.v
