[package]
name = "monodrone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_panic = "0.2.1"
eframe = "0.27.2"
egui = "0.27.2"
env_logger = "0.11.3"
libc = "0.2.155"
midi = "0.1.0"
rustsynth = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.11.0"
