[package]
name = "monodrone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_panic = "0.2.1"
eframe = "0.27.2"
egui = "0.27.2"
env_logger = "0.11.3"
lean-sys = { git = "https://github.com/bollu/lean-sys/", branch = "macos-query-xcrun", features=[] }
libc = "0.2.155"
midi = "0.1.0"
raylib = "5.0.1"
rustysynth = "1.3.1"
tinyaudio = "0.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.11.0"

[env]
LEAN_ABORT_ON_PANIC=1
