[package]
name = "monodrone"
version = "0.1.0"
edition = "2021"
description = "Formally Verified Music Synth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_panic = "0.2.1"
directories = "5.0.1"
eframe = "0.27.2"
egui = "0.27.2"
env_logger = "0.11.3"
lean-sys = { git = "https://github.com/bollu/lean-sys/", branch = "macos-query-xcrun", features=[] }
libc = "0.2.155"
midi = "0.1.0"
midir = "0.10.0"
midly = "0.5.3"
muda = "0.13.5"
rand = "0.8.5"
raylib = "5.0.1"
rfd = "0.14.1"
rustysynth = "1.3.1"
tinyaudio = "0.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.11.0"

[env]
LEAN_ABORT_ON_PANIC=1



[package.metadata.bundle]
name = "Monodrone"
identifier = "com.pixel-druid.monodrone"
icon = ["favicon.ico", "favicon.png"]
version = "1.0.0"
resources = ["resources/"]
copyright = "Copyright (c) Siddharth Bhat 2024. All rights reserved."
category = "Developer Tool"
short_description = "Formally Verified Music Synthesizer"
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
# deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
# osx_frameworks = ["SDL2"]

